Name:                attoparsec-enumerator

Version:             0.1

Synopsis:            An adapter to convert attoparsec Parsers into blazing-fast Iteratees based on the alternative Data.Enumerator iteratee package

Homepage:            http://github.com/ozataman/attoparsec-enumerator

License:             BSD3

License-file:        LICENSE

Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com

Category:            Data

Build-type:          Simple

Cabal-version:       >=1.2

Library
  hs-source-dirs: src

  Exposed-modules:     Data.Attoparsec.Enumerator

  build-depends:
    attoparsec >= 0.8 && < 0.9,
    base >= 4 && < 5,
    bytestring,
    enumerator >= 0.4 && <0.5
